# crypto-bot

./: .env.example  .gitignore  README.md  debug_imap.py  get_id.py  main.py  pyproject.toml
scripts/: debug_imap.py  get_google_token.py  get_id.py
src/: analyst.py  config.py  extractor.py  monitor.py  notifier.py
